--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -346,14 +346,23 @@ button.settings:hover {
 /* 	font-size: 0.8em; */
 }
 #footer .logo {
+	float: left;
 	font-size: 1.5em;
 	font-weight: 100;
 /* 	margin-top: 30px; */
-	text-align:center;
-	position:absolute;
-	top: 40px;
+	text-align: center;
+	position: relative;
+	top: 30px;
+	height: auto;
 /* 	display:block; */
-	
+}
+#footer .application-version-wrapper {
+	float: left;
+	position: relative;
+	top: 40px;
+	left: 30px;
+	height: auto;
+	font-size: 0.7em;
 }
 #footer .logo img {
 /* 	position:absolute; */
