UI: added add category modal form in calculation step edit

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -931,6 +931,10 @@ table.import-csv-table input[type=checkbox] {
 #calculation-step-exec-container .test-input-var .form-group.small input {
 	width: 100%;
 }
+#step-edit-page .modal label , 
+#step-edit-page .modal{
+	color: #FFF;
+}
 
 /**
 **
