--- a/calc-control-panel/src/main/resources/org/openforis/calc/controlpanel/calc_control_panel.fxml
+++ b/calc-control-panel/src/main/resources/org/openforis/calc/controlpanel/calc_control_panel.fxml
@@ -8,18 +8,16 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<Pane maxHeight="500.0" maxWidth="600.0" minHeight="180.0" minWidth="600.0" prefHeight="500.0" prefWidth="600.0" 
-styleClass="main-pane" stylesheets="@org/openforis/calc/controlpanel/calc_control_panel.css" 
-xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" 
-fx:controller="org.openforis.calc.controlpanel.CalcControlPanelController">
+<Pane fx:id="applicationPane" maxHeight="500.0" maxWidth="600.0" minHeight="180.0" minWidth="600.0" prefHeight="500.0" prefWidth="600.0" styleClass="main-pane" stylesheets="@org/openforis/calc/controlpanel/calc_control_panel.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openforis.calc.controlpanel.CalcControlPanelController">
 	
    <children>
-      <HBox layoutX="173.0" layoutY="45.0" spacing="50.0">
+      <HBox layoutX="173.0" layoutY="36.0" spacing="50.0">
          <children>
             <Button fx:id="startBtn" layoutX="173.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#startServer" prefHeight="60.0" prefWidth="100.0" text="Start" />
             <Button fx:id="stopBtn" layoutX="324.0" layoutY="45.0" mnemonicParsing="false" onMouseClicked="#stopServer" prefHeight="60.0" prefWidth="100.0" text="Stop" />
          </children>
       </HBox>
-      <TextArea fx:id="console" editable="false" layoutX="25.0" layoutY="128.0" prefHeight="360.0" prefWidth="558.0" />
+      <TextArea fx:id="console" editable="false" layoutX="21.0" layoutY="128.0" prefHeight="370.0" prefWidth="560.0" />
+      <Button fx:id="logBtn" layoutX="514.0" layoutY="70.0" mnemonicParsing="false" onMouseClicked="#toggleLog" prefHeight="25.0" prefWidth="66.0" text="Log" />
    </children>
 </Pane>
