added tasks to processing chain job to calculate the error

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1416,3 +1416,11 @@ ul.ui-sortable li {
 .equation-lists button {
 	margin-bottom: 1px;
 }
+
+
+/**
+* Error settings
+*/
+#error-settings .button-container button {
+	margin-bottom: 2px;
+}
