--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -444,6 +444,7 @@ button.settings:hover {
 	font-weight: 200;
 	letter-spacing: 0.03em;
 	border-radius: 1px;
+	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 /* 	line-height: 2em; */
 /* 	overflow: visible; */
 /* 	border-radius:8px; */
