--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -15,7 +15,8 @@ html, body {
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	letter-spacing:0.1em;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+/* 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
+	font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	overflow: hidden;
 }
 
@@ -608,8 +609,8 @@ Data vis options
 .data-vis-options .categories button {
 	width: 100%;
 /* 	margin: 0.1em 0px; */
-	font-size: 0.7em;
-	font-weight: 200;
+	font-size: 0.8em;
+	font-weight: 100;
 /* 	padding: 1em 0.4em; */
 	padding: 0.5em 0em;
 }
