--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -10,7 +10,7 @@ html, body {
 	height: 100%;
 	margin: 0px;
 	padding: 0px;
-	font-weight: 200;
+	font-weight: 100;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -340,6 +340,21 @@ button.settings:hover {
 	border-color: #5b718c;
 /* 	border-color:  #5a5e6b; */
 }
+
+#calculation li.calculation-step button .badge{
+	background-color: transparent;
+	padding: 0px;
+/* 	position: relative; */
+/* 	top: -40px; */
+	right: -80px;
+	/* left: 45px; */
+	/* margin-top: -40px; */
+/* 	display: block; */
+/* 	width: 40px; */
+	font-size: 1.1em;
+	color: #acb7ca;
+}
+
 #calculation .calculation-step-placeholder {
 	border: 1px dashed #5b718c;
 	border-radius: 1px;
@@ -375,6 +390,7 @@ button.settings:hover {
 	background-color: #2c3e50;
 	position: fixed; 
 	width: 210px ;
+	z-index: 90;
 /* 	border-top: 1px solid #5b718c; */
 /* 	border-left: 1px solid #5b718c; */
 /* 	-webkit-box-shadow	: 1px 1px 0px 0px rgba(91,113,140,1); */
