--- a/calc-webapp/src/main/webapp/css/calc/r-editor.css
+++ b/calc-webapp/src/main/webapp/css/calc/r-editor.css
@@ -5,6 +5,8 @@
 	height: 100%;
 	text-align: left;
 	font-size: 0.9em;
+/* 	font-family: "Courier New", Courier, monospace; */
+/* 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
 }
 
 .CodeMirror-scroll {
