--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -343,16 +343,11 @@ button.settings:hover {
 
 #calculation li.calculation-step button .badge{
 	background-color: transparent;
-	padding: 0px;
-/* 	position: relative; */
-/* 	top: -40px; */
+	padding: 0px 0px 0px 150px;
 	right: -80px;
-	/* left: 45px; */
-	/* margin-top: -40px; */
-/* 	display: block; */
-/* 	width: 40px; */
 	font-size: 1.1em;
 	color: #acb7ca;
+	position: inherit;
 }
 
 #calculation .calculation-step-placeholder {
@@ -390,7 +385,7 @@ button.settings:hover {
 	background-color: #2c3e50;
 	position: fixed; 
 	width: 210px ;
-	z-index: 90;
+/* 	z-index: 90; */
 /* 	border-top: 1px solid #5b718c; */
 /* 	border-left: 1px solid #5b718c; */
 /* 	-webkit-box-shadow	: 1px 1px 0px 0px rgba(91,113,140,1); */
@@ -402,7 +397,7 @@ button.settings:hover {
 	float: right;
 	height: 90px; 
 }
-.button-bar-right , .button-bar-right .button-bar-inner{
+.button-bar-right , .button-bar-right .button-bar-inner {
 	height: 90px;	
 }
 .button-bar-right .button-bar-inner {
@@ -423,7 +418,7 @@ button.settings:hover {
 	background-color: #5b718c;
 	border-color: #5b718c;
 }
-.button-bar-inner button i{
+.button-bar-inner button i {
 	font-size: 2em;
 }
 
