--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -343,7 +343,7 @@ button.settings:hover {
 
 #calculation li.calculation-step button .badge{
 	background-color: transparent;
-	padding: 0px 0px 0px 150px;
+	margin: 0px 0px 0px 150px;
 	right: -80px;
 	font-size: 1.1em;
 	color: #acb7ca;
@@ -393,15 +393,12 @@ button.settings:hover {
 /* 	box-shadow			: 1px 1px 0px 0px rgba(91,113,140,1); */
 }
 .button-bar-right {
-	width: 105px ;
 	float: right;
-	height: 90px; 
+/* 	height: 90px;  */
 }
 .button-bar-right , .button-bar-right .button-bar-inner {
 	height: 90px;	
-}
-.button-bar-right .button-bar-inner {
-	width: 8em ;
+	width: 105px ;
 }
 .button-bar-inner button,
 .button-bar-inner button:focus {
