--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -608,19 +608,16 @@ Data vis options
 .data-vis-options .entity-select {
 	padding: 1em;
 }
-.data-vis-options .quantities ,
-.data-vis-options .categories {
+.data-vis-options .variables {
 	width	: 100%;
 	height 	: 75%;
 	overflow: auto;
 	padding: 0.3em 0px;
 }
-.data-vis-options .quantities>div,
-.data-vis-options .categories>div {
+.data-vis-options .variables>div {
 	padding-bottom: 2px;
 }
-.data-vis-options .quantities button ,
-.data-vis-options .categories button {
+.data-vis-options .variables button {
 	width: 100%;
 /* 	margin: 0.1em 0px; */
 	font-size: 0.8em;
