--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -331,6 +331,30 @@ button.settings:hover {
 	border-color: #4d5e75;
 }
 
+#calculation li.CATEGORY button {
+	background-color: #637471;
+	border-color: #637471;
+}
+#calculation li.EQUATION button {
+	background-color: #465160;
+	border-color: #465160;
+}
+
+#calculation .calculation-steps-entity-container {
+	display: table;
+}
+#calculation .calculation-steps-entity-container li {
+	float: left;
+	list-style: none;
+}
+#calculation li.entity button {
+	width: 100%;
+	height: 100%;
+	padding: 30px 5px 0px 5px;
+/* 	background-color: #4d5e75; */
+/* 	border-color: #4d5e75; */
+}
+
 #calculation li.calculation-step button:hover {
 	width: 100%;
 	background-color: #5b718c;
@@ -342,22 +366,7 @@ button.settings:hover {
 	height: 90px;
 	padding: 1px 1px;
 }
-#calculation li.entity button {
-	width: 100%;
-	height: 100%;
-	background-color: #4d5e75;
-	border-color: #4d5e75;
-}
 
-
-#calculation li.CATEGORY button {
-	background-color: #637471;
-	border-color: #637471;
-}
-#calculation li.EQUATION button {
-	background-color: #465160;
-	border-color: #465160;
-}
 
 #calculation li.calculation-step button .badge{
 	background-color: transparent;
