--- a/calc-webapp/src/main/webapp/css/calc/r-editor.css
+++ b/calc-webapp/src/main/webapp/css/calc/r-editor.css
@@ -4,7 +4,7 @@
 	height: 100%;
 	height: 100%;
 	text-align: left;
-	font-size: 0.9em;
+	font-size: 12px;
 	z-index: 100;
 /* 	font-family: "Courier New", Courier, monospace; */
 /* 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; */
