working in progress - calc 2.0

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1658,3 +1658,11 @@ ul.ui-sortable li {
 #category-edit-page .categories button {
 	margin-bottom: 2px;
 }
+
+
+
+
+/* Common form classes  */
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
+    opacity: .7 !important;
+}
