--- a/calc-webapp/src/main/webapp/css/calc/r-editor.css
+++ b/calc-webapp/src/main/webapp/css/calc/r-editor.css
@@ -18,3 +18,11 @@
 .CodeMirror-hints {
 	z-index: 200;
 }
+
+.CodeMirror.readOnly  {
+    opacity: .7;
+    cursor: not-allowed !important;
+}
+.CodeMirror.readOnly div {
+    cursor: not-allowed  !important;
+}
