--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -487,17 +487,15 @@ button.settings:hover {
 * Footer
 */
 #footer {
-  	height: 9%;
+  	height: 10%;
 	position: fixed;
-/* 	top: -75px; */
 	z-index: 10;
 	width: 100%;
 	background-color: #ecf0f1;
 	margin:0px;
-/* 	top:0px; */
 } 
 .footer-placeholder {
-	height: 9%;
+	height: 10%;
 }
 
 #footer div{
@@ -513,7 +511,7 @@ button.settings:hover {
 #footer .links  button {
 	height: 100%;
 	width: 20%;
-	font-size:1.2em;
+/* 	font-size:1.2em; */
 	font-weight: 100;
 	letter-spacing: 0.03em;
 	border-radius: 1px;
@@ -524,7 +522,7 @@ button.settings:hover {
 /* 	font-size: 0.8em; */
 }
 #footer .logo {
-	font-size: 1.2em;
+/* 	font-size: 1.2em; */
 	font-weight: 100;
 /* 	margin-top: 30px; */
 	text-align: center;
@@ -537,27 +535,40 @@ button.settings:hover {
 	letter-spacing: 3px; 
 	color: rgba(212, 224, 215, 0.6);
 }
-
+#footer .logo button.calc-btn, 
+#footer .logo button.calc-btn:focus {
+	border-radius: 32px;
+    border: 1px solid rgba(46, 155, 181, 0.23);
+    background-color: rgba(58, 159, 159, 0.15);
+    height: 50px;
+    width: 50px;
+    padding: 0px;
+    position: absolute;
+    right: 50px;
+}
+#footer .logo button.calc-btn:hover {
+	 background-color: rgba(58, 159, 159, 0.25);
+}
 #footer .application-version {
-/* 	position: relative; */
-/* 	top: 12px; */
-/* 	left: 30px; */
 	height: auto;
 	font-size: 0.5em;
-/* 	text-align: center; */
 }
-#footer .logo img {
-/* 	position:absolute; */
-/* 	top: 10px; */
-/* 	left: 85px; */
-/* display:inline-block; */
+#footer .calc-options {
+    border: 1px solid rgba(86, 91, 103, 0.65);
+    background-color: rgba(33, 130, 130, 0.18);
+    padding: 20px 10px;
+    position: absolute;
+    bottom: 80px;
+    height: 150px;
+    right: 10px;
 }
-#footer .logo div {
-/* 	margin-left: 40px; */
-/* display:block; */
+#footer .calc-options div{
+	height: auto !important;
 }
-
-
+#footer .calc-options button {
+	font-weight: 100 !important;
+    font-size: 12px !important;
+}
 #footer button.back {
 	font-size: 	3em;	
 	display: 	none;	
