--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1361,29 +1361,48 @@ ul.ui-sortable li {
 /**
 * ============ JOB status
 */
+div.progress {
+	border-radius : 1px !important;
+}
 #job-status .modal-dialog {
-	width: 80%;	
-	height: 100%;
+    width: 90%;
+    height: 100%;
+}
+#job-status .modal-dialog button {
+	font-weight: 100 !important;
 }
 #job-status .modal-content {
+    background-color: rgba(73, 85, 113, 0.9);
+    color: #FFFFFF;
+    border: none;
+    border-radius: 0px;
 	border-radius: 0px;
-	-webkit-box-shadow: 0px 0px 1px 1px rgba(149,165,166,0.4);
-	-moz-box-shadow: 0px 0px 1px 1px rgba(149,165,166,0.4);
-	box-shadow: 0px 0px 1px 1px rgba(149,165,166,0.4);
-	max-height: 100%;
-	min-height: 400px;
+    height: 100%;
 }
 #job-status .modal-header {
 	border-bottom: none;
+	height: 10%;
 }
-#job-status .task-section {
-	overflow-y: auto;
-	overflow-x: hidden;
-	min-height: 100px;
+#job-status .modal-body {
+	height: 80%;
 }
 #job-status .modal-footer {
 	border-top: none;
 	margin-top: 0px;
+	height: 10%;
+}
+#job-status .task-section {
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 100%;
+}
+#job-status .task-section-row {
+	height: 40%;
+/* 	max-height: 50% */
+}
+#job-status .log-section {
+	height: 60%;
+/*     max-height: 80%; */
 }
 #job-status .status {
 	text-transform: capitalize;
@@ -1421,16 +1440,17 @@ ul.ui-sortable li {
 	padding-top: 10px;
 }
 #job-status .log {
-	border: none;
-/* 	border: 1px inset #a2a4b1; */
-	-webkit-box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5);
-	-moz-box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5);
-	box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5);
+/* 	border: none; */
+/* 	-webkit-box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5); */
+/* 	-moz-box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5); */
+/* 	box-shadow: 1px 1px 2px 1px rgba(149,165,166,0.5); */
 	
 	padding: 2px 10px;
-	
-	height: 100%;
 	overflow-y: auto;
+    border: 1px solid #686877;
+    background-color: rgba(253, 253, 255, 0.95);
+    color: black;
+    height: 100% !important;
 }
 #job-status .log div {
 	font-family: monospace;
