added explanatory text to sampling design page

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1712,3 +1712,10 @@ div.progress {
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
     opacity: .7 !important;
 }
+
+
+.hint {
+	text-align: center;
+	font-size: 12px;
+	font-style: italic;	
+}
