added components for importing csv files to sampling design.

--- a/calc-webapp/src/main/webapp/css/calc.css
+++ b/calc-webapp/src/main/webapp/css/calc.css
@@ -1177,6 +1177,9 @@ table.import-csv-table input[type=checkbox] {
 .width50 {
 	width: 50%;	
 }
+.width60 {
+	width: 60%;
+}
 .width80 {
 	width: 80%;	
 }
