--- a/calc-webapp/src/main/webapp/css/calc/sampling-design/sampling-design.css
+++ b/calc-webapp/src/main/webapp/css/calc/sampling-design/sampling-design.css
@@ -3,7 +3,6 @@
 /**
 **
 ** Sampling design section
-**
 **/
 #sampling-design button.prev:disabled ,
 #sampling-design button.next:disabled {
@@ -44,6 +43,29 @@
 	height: 100% !important;
 	border: 1px solid rgba(33, 132, 131, 0.28);
 }
+.sampling-design-erd ,
+.sampling-design-erd * {
+	font-size: 12px;	
+}
+.sampling-design-erd input {
+    height: 30px !important;
+    border-radius: 0px;
+    color: #E4E4E5;
+    background-color: rgb(103, 107, 111);
+    border: 1px solid rgba(228, 228, 229, 0.18);
+	font-weight: 100;
+}
+.sampling-design-erd .combobox-container .caret{
+	color : #E4E4E5;
+	font-weight: 100;
+	border-top: 4px solid #E4E4E5;	
+}
+.sampling-design-erd .combobox-container .combobox-clear i {
+	color : #E4E4E5;
+	font-weight: 100;
+    text-shadow: none !important;
+ }
+
 .sampling-design-erd > div {
 	width: 33.33333333333333% !important;
 	height: 100% !important;
@@ -54,15 +76,54 @@
 }
 
 .erd-table {
-/* 	width: 80%; */
     border: 1px solid rgba(183, 176, 176, 0.43);
     border-radius: 6px;
     margin: 0px !important;
 }
 .erd-table .header {
 }
+.erd-table .header > div {
+	float: left;
+}
+.erd-table .header .button-container {
+	padding: 1px 2px !important;
+}
+
 .erd-table .body {
 }
+.erd-table button {
+    font-size: 10px !important;
+    border-radius: 1px !important;
+    padding: 5px 10px;
+    width: 100%;
+}
+.erd-table button:disabled {
+	opacity : .4 !important;
+}
+
+.stratum-container , .aoi-container {
+	height: 50%;
+	display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .table-join {
 	padding-top: 10px;
